# totally-legit

./: .gitignore  Cargo.toml  cliff.toml  justfile
totally-legit/: Cargo.toml
totally-legit-core/: Cargo.toml
totally-legit-util/: Cargo.toml
totally_legit/: CHANGELOG.md  Cargo.toml  README.md
totally_legit/src/: lib.rs
totally_legit_alternative/: CHANGELOG.md  Cargo.toml
totally_legit_alternative/src/: lib.rs
totally_legit_core/: CHANGELOG.md  Cargo.toml
totally_legit_macros/: CHANGELOG.md  Cargo.toml
totally_legit_util/: CHANGELOG.md  Cargo.toml
