[package]
name = "totally-legit"
version = "0.0.1"
license = "MIT"
description = "totally-legit"
edition = "2024"

[lib]
name = "totally_legit"

[dependencies]
totally-legit-core = { path = "../totally_legit_core", version = "0.0.1" }
totally-legit-util = { path = "../totally_legit_util", version = "0.0.1" }
