[package]
name = "totally-legit"
version = "1.0.0"
license = "MIT"
description = "totally-legit"
edition = "2024"

[lib]
name = "totally_legit"

[dependencies]
totally-legit-core = { path = "../totally_legit_core", version = "1.0.0" }
totally-legit-util = { path = "../totally_legit_util", version = "1.0.0" }
